# IceWMCP

./: .gitignore  CONTRIBUTORS.md  README.md  pyproject.toml
IceWMCP-2/: DndCTree.py  ICEWMCP_BugReport.py  ICEWMCP_WEB_VERSION  IceMe.py  IceMenuTree.py  IceWMCP.py  IceWMCPEnergyStar.py  IceWMCPGtkIconSelection.py  IceWMCPKeyboard.py  IceWMCPMouse.py  IceWMCPRun.py  IceWMCPSystem.py  IceWMCPWallpaper.py  IceWMCPWinOptions.py  IceWMCP_Dialogs.py  IceWMCP_GtkPCCard.py  IconSelectionDialog.py  MenuParser.py  Preferences.py  PreviewWindow.py  constants.py  icepref.py  icepref_search.py  icepref_td.py  icesound.py  icewmcp_common.py  icewmcp_dnd.py  launcher.py  pangoxlfd.py  phrozenclock.py  pyprintcommon.py  pyspool.py
IceWMCP-2/PyInstallShield/: PyInstallShield  icepref-install-config.txt  icepref-td-install-config.txt  phrozenclock-install-config.txt
IceWMCP-2/doc/: CHANGES.txt  CHANGES_ALL.txt  IcePref-doc.html  IceSoundManager_Help.txt  icesound-es-help.html
IceWMCP-2/help/: icesound.txt
IceWMCP-2/icewmcp-developers-release/: ICEWMCP_BugReport.py  IceWMCPRun.py  README_DEVELOPERS_RELEASE.txt  icewmcp_common.py
IceWMCP-2/locale/: icepref.pot  icewmcp.pot
IceWMCP-2/new-build-scripts/: ICEWMCP-HW.spec  ICEWMCP-Tray.spec  ICEWMCP.spec  make_dev  make_gtkpccard  make_ice_real  make_icepref  make_icepref_td  make_icesound  make_phrozenclock  make_trayicon  pack_hw_i586  prep_hw_plugin  update_install_gtkpccard  update_install_ice  update_install_icepref  update_install_icepref_td  update_install_icesound  update_install_phrozenclock
src/icewmcp/: IceMe.py  (+41 more)
(+17 files in other folders)
